--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 
-PROJECT(BoundingPolygon)
-
-#### Libraries ####
-#VTK
-FIND_PACKAGE(VTK REQUIRED)
-INCLUDE(${VTK_USE_FILE})
-
-#ITK
-FIND_PACKAGE(ITK REQUIRED)
-INCLUDE(${ITK_USE_FILE})
+PROJECT(GraphOpening)
 
 #Boost
 set(Boost_USE_MULTITHREADED ON)
@@ -19,11 +10,4 @@ INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS})
 
 #### Executables ####
-ADD_EXECUTABLE(BoundingPolygon BoundingPolygon.cxx Helpers.cxx)
-TARGET_LINK_LIBRARIES(BoundingPolygon vtkHybrid vtkInfovis ${ITK_LIBRARIES})
-
-ADD_EXECUTABLE(FindBoundary FindBoundary.cxx Helpers.cxx)
-TARGET_LINK_LIBRARIES(FindBoundary vtkHybrid vtkInfovis ${ITK_LIBRARIES})
-
-ADD_EXECUTABLE(ImageToPoints ImageToPoints.cxx Helpers.cxx)
-TARGET_LINK_LIBRARIES(ImageToPoints vtkHybrid vtkInfovis ${ITK_LIBRARIES})
+ADD_EXECUTABLE(GraphOpening GraphOpening.cxx)
