--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,17 @@ cmake_minimum_required(VERSION 2.6)
 PROJECT(GraphOpening)
 
 #Boost
-set(Boost_USE_MULTITHREADED ON)
-FIND_PACKAGE(Boost 1.38 COMPONENTS program_options required)
+FIND_PACKAGE(Boost)
 
 INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS})
 
 #### Executables ####
-ADD_EXECUTABLE(GraphOpening GraphOpening.cxx)
+ADD_EXECUTABLE(Example Example.cxx GraphOpening.cxx)
+target_link_libraries(Example boost_graph)
+
+ADD_EXECUTABLE(Demo Demo.cxx GraphOpening.cxx)
+target_link_libraries(Demo boost_graph)
+
+ADD_EXECUTABLE(CreateDemoGraph CreateDemoGraph.cxx GraphOpening.cxx)
+target_link_libraries(CreateDemoGraph boost_graph)
