ENH: Implemented successive null removal difference stopping criteria

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ target_link_libraries(GraphOpeningTrackingExample boost_graph)
 ADD_EXECUTABLE(GraphOpeningNaiveExample GraphOpeningNaiveExample.cxx Helpers.cxx GraphOpeningNaive.cxx)
 target_link_libraries(GraphOpeningNaiveExample boost_graph)
 
+ADD_EXECUTABLE(GraphOpeningNullRemovalDifferenceExample GraphOpeningNullRemovalDifferenceExample.cxx Helpers.cxx GraphOpeningTracking.cxx)
+target_link_libraries(GraphOpeningNullRemovalDifferenceExample boost_graph)
+
+# This program was used to generate the images in the accompanying article
 ADD_EXECUTABLE(Demo Demo.cxx Helpers.cxx GraphOpeningNaive.cxx)
 target_link_libraries(Demo boost_graph)
 
